minor change in line 26 in SpotAssignmentStrategyImpl